crates/sui-adapter-transactional-tests/tests/shared/by_value_shared_object_deletion_via_merge.exp
processed 21 tasks

init:
A: object(0,0)

task 1 'publish'. lines 13-60:
Error: error[E03002]: unbound module
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:17:9
   │
17 │     use sui::sui::SUI;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:23:50
   │
23 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:29:46
   │
29 │         transfer::public_transfer(coin::zero<BFC>(ctx), @A)
   │                                              ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:31:33
   │
31 │     public fun deleter(o2: Coin<BFC>) {
   │                                 ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:34:33
   │
34 │     public fun freezer(o2: Coin<BFC>) {
   │                                 ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:37:50
   │
37 │     public fun dofer(parent: &mut Obj2, o2: Coin<BFC>) {
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:40:49
   │
40 │     public fun dfer(parent: &mut Obj2, o2: Coin<BFC>) {
   │                                                 ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:43:36
   │
43 │     public fun transferer(o2: Coin<BFC>) {
   │                                    ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpKShc41:46:32
   │
46 │     public fun sharer(o2: Coin<BFC>) {
   │                                ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 62-62:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 64-64:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'view-object'. lines 66-66:
Error: task 4, lines 66-66. Unbound fake id 2,0

task 5 'view-object'. lines 68-71:
Error: task 5, lines 68-68. Unbound fake id 3,0

task 6 'programmable'. lines 72-76:
Error: INVALID TEST. Unknown object, object(2,0)

task 7 'run'. lines 78-78:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 8 'run'. lines 80-80:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 9 'run'. lines 82-82:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 10 'view-object'. lines 84-84:
Error: task 10, lines 84-84. Unbound fake id 7,0

task 11 'view-object'. lines 86-86:
Error: task 11, lines 86-86. Unbound fake id 8,0

task 12 'view-object'. lines 88-90:
Error: task 12, lines 88-88. Unbound fake id 9,0

task 13 'programmable'. lines 91-95:
Error: INVALID TEST. Unknown object, object(7,0)

task 14 'run'. lines 97-97:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 15 'run'. lines 99-99:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 16 'run'. lines 101-101:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 17 'view-object'. lines 103-103:
Error: task 17, lines 103-103. Unbound fake id 14,0

task 18 'view-object'. lines 105-105:
Error: task 18, lines 105-105. Unbound fake id 15,0

task 19 'view-object'. lines 107-109:
Error: task 19, lines 107-107. Unbound fake id 16,0

task 20 'programmable'. lines 110-112:
Error: INVALID TEST. Unknown object, object(14,0)
